--- a/index.html
+++ b/index.html
@@ -185,18 +185,18 @@
     <footer>
       <div class="bottom-logo"><img src="images/logo.svg" alt="logo" /></div>
       <nav>
-        <ul>
-          <div>
+        <ul class="list">
+          <ul>
             <li><a href="#">FAQs</a></li>
             <li><a href="#">Contact Us</a></li>
-          </div>
-          <div>
+          </ul>
+          <ul>
             <li><a href="#">Privacy Policy</a></li>
             <li><a href="#">Press Kit</a></li>
-          </div>
-          <div>
+          </ul>
+          <ul>
             <li><a href="#">Install Guide</a></li>
-          </div>
+          </ul>
         </ul>
       </nav>
 
