updated html and css files

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       <section class="section-five">
         <div class="container">
           <div class="main-title">
-            <h1 class="heading">Clipboard for iOS and Mac OS</h1>
+            <h2 class="heading">Clipboard for iOS and Mac OS</h2>
             <p class="sub-heading">
               Available for free on the App Store. Download for Mac or iOS, sync
               with iCloud and you’re ready to start adding to your clipboard.
@@ -186,17 +186,18 @@
       <div class="bottom-logo"><img src="images/logo.svg" alt="logo" /></div>
       <nav>
         <ul class="list">
-          <ul>
+          <div>
             <li><a href="#">FAQs</a></li>
             <li><a href="#">Contact Us</a></li>
-          </ul>
-          <ul>
+          </div>
+          <div>
             <li><a href="#">Privacy Policy</a></li>
             <li><a href="#">Press Kit</a></li>
-          </ul>
-          <ul>
+          </div>
+
+          <div>
             <li><a href="#">Install Guide</a></li>
-          </ul>
+          </div>
         </ul>
       </nav>
 
