updated html file

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
 
       <!-- Section Four -->
       <article>
+        <h4 aria-hidden="true"></h4>
         <img src="images/logo-google.png" alt="logo-google" />
         <img src="images/logo-ibm.png" alt="logo-ibm" />
         <img src="images/logo-microsoft.png" alt="logo-microsoft" />
@@ -187,12 +188,12 @@
       <nav>
         <ul class="list">
           <div>
-            <li><a href="#">FAQs</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="#" aria-hidden="true">FAQs</a></li>
+            <li><a href="#" aria-hidden="true">Contact Us</a></li>
           </div>
           <div>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Press Kit</a></li>
+            <li><a href="#" aria-hidden="true">Privacy Policy</a></li>
+            <li><a href="#" aria-hidden="true">Press Kit</a></li>
           </div>
 
           <div>
