fixing the accessibility issues

--- a/index.html
+++ b/index.html
@@ -188,16 +188,16 @@
       <nav>
         <ul class="list">
           <div>
-            <li><a href="#" aria-hidden="true">FAQs</a></li>
-            <li><a href="#" aria-hidden="true">Contact Us</a></li>
+            <li><a href="#"></a>FAQs</li>
+            <li><a href="#"></a>Contact Us</li>
           </div>
           <div>
-            <li><a href="#" aria-hidden="true">Privacy Policy</a></li>
-            <li><a href="#" aria-hidden="true">Press Kit</a></li>
+            <li><a href="#"></a>Privacy Policy</li>
+            <li><a href="#"></a>Press Kit</li>
           </div>
 
           <div>
-            <li><a href="#">Install Guide</a></li>
+            <li><a href="#"></a>Install Guide</li>
           </div>
         </ul>
       </nav>
