fixed the accessibility issues

--- a/index.html
+++ b/index.html
@@ -186,20 +186,28 @@
     <footer>
       <div class="bottom-logo"><img src="images/logo.svg" alt="logo" /></div>
       <nav>
-        <ul class="list">
+        <div class="links">
           <div>
-            <li><a href="#"></a>FAQs</li>
-            <li><a href="#"></a>Contact Us</li>
-          </div>
-          <div>
-            <li><a href="#"></a>Privacy Policy</li>
-            <li><a href="#"></a>Press Kit</li>
+            <div>
+              <a href="#">FAQs</a>
+            </div>
+            <div>
+              <a href="#">Contact Us</a>
+            </div>
           </div>
 
           <div>
-            <li><a href="#"></a>Install Guide</li>
+            <div>
+              <a href="#">Privacy Policy</a>
+            </div>
+            <div>
+              <a href="#">Press Kit</a>
+            </div>
           </div>
-        </ul>
+          <div>
+            <a href="#">Install Guide</a>
+          </div>
+        </div>
       </nav>
 
       <div class="social">
