fixed accessibility issues

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
       <!-- Section Four -->
       <article>
-        <h4 aria-hidden="true"></h4>
+        <h4 aria-hidden="true">heading</h4>
         <img src="images/logo-google.png" alt="logo-google" />
         <img src="images/logo-ibm.png" alt="logo-ibm" />
         <img src="images/logo-microsoft.png" alt="logo-microsoft" />
