improving the accessibility

--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="A solution for Clipboard landing page"
+      content="Author: RagaBoGaa Author,
+     Category: langing page, Price: free,
+    Length: 784 pages"
+    />
     <link
       rel="icon"
       type="image/png"
