improving the accessibility

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <!-- displays site properly based on user's device -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
-      name="A solution for Clipboard landing page"
+      name="description"
       content="Author: RagaBoGaa Author,
-     Category: langing page, Price: free,
-    Length: 784 pages"
+     Category: landing page, Price: free,
+    a solution for clipboard landing page"
     />
     <link
       rel="icon"
