improving the accessibility

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <!-- displays site properly based on user's device -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
-      name="description"
+      name="A solution for Clipboard landing page"
       content="Author: RagaBoGaa Author,
-     Category: landing page, Price: free,
-    a solution for clipboard landing page"
+     Category: langing page, Price: free,
+    Length: 784 pages"
     />
     <link
       rel="icon"
@@ -240,7 +240,7 @@
         ></a>
       </div>
     </footer>
-    <p class="attribution">
+    <p class="attribution" role="footer">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
