improving the accessibility

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         ></a>
       </div>
     </footer>
-    <p class="attribution" role="footer">
+    <p class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
